@@ -1,2 +1,72 @@
 # 9-Man-Morris-Board-Game
-The board Game for 9 man morris using JavaFx and Java
+
+The board game for 9 Man Morris using JavaFX and Java.
+
+## Features
+
+* Interactive 9-Man-Morris board game
+* Single-player and multiplayer modes
+* User-friendly interface with JavaFX
+* Robust game logic implemented in Java
+* Save and load game states
+* Visual indicators for valid moves and game status
+
+## Technologies
+
+![Java](https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white)
+![JavaFX](https://img.shields.io/badge/JavaFX-1E90FF?style=for-the-badge&logo=java&logoColor=white)
+![Maven](https://img.shields.io/badge/Maven-C71A36?style=for-the-badge&logo=apache-maven&logoColor=white)
+![IntelliJ IDEA](https://img.shields.io/badge/IntelliJ_IDEA-000000?style=for-the-badge&logo=intellij-idea&logoColor=white)
+![Git](https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white)
+
+## Getting Started
+
+### Installation
+
+```sh
+$ git clone https://github.com/namith1003/9-Mens-Morris
+$ cd 9-Mens-Morris
+```
+
+### Usage
+
+```sh
+# Ensure you have Java JDK version 16 or above installed
+# Navigate to the directory where the nine.jar file is located
+$ cd project/Sprint2/nine/
+# Run the following command in the terminal
+$ java --module-path javafx-sdk-20.0.1/lib --add-modules javafx.controls,javafx.fxml -jar nine.jar
+```
+
+### How to Generate the Executable File
+
+* Build the Project:
+** In IntelliJ IDEA, go to the "Build" menu and select "Build Project" to compile your Java code and generate the necessary class files.
+
+* Create an Artifact Configuration:
+** In IntelliJ IDEA, go to "File" > "Project Structure" > "Artifacts" > "+" > "JAR".
+
+* Configure the Artifact:
+** Select the main class containing the main method of your JavaFX application as the entry point.
+
+## Roadmap
+
+- [x] Create Board and Pieces
+- [x] Implement game logic
+- [x] Develop single-player mode
+- [x] Develop multiplayer mode
+- [x] Develop a tutorial mode
+- [x] Add save and load functionality
+- [x] Enhance UI/UX with advanced JavaFX features
+- [ ] Implement online multiplayer functionality
+- [ ] Add an Advanced AI opponent
+
+## Demo
+
+## Documentation
+
+## Release Notes
+
+You can find the release note for the latest release [here](https://github.com/namith1003/react-modalicious/releases/latest)
+
+You can browse them all [here](https://github.com/namith1003/react-modalicious/releases)
